# embedded

src/: CMakeLists.txt  infrared_sensor.c  infrared_sensor.h  led_buzzer.c  led_buzzer.h  light_sensor.c  light_sensor.h  main.c  servo_motor.c  servo_motor.h  sound_sensor.c  sound_sensor.h  switch.c  switch.h
